syntax = "proto3";

package PhysicsTelemetry;

option csharp_namespace = "Physics.Telemetry.Serialised";

message MessageHeader
{
	uint32 frameId = 1;
	
	enum MessageType
	{
		RigidBodyUpdate = 0;
		ShapeCreated = 1;
		ShapeChanged = 2;
	}
	
	MessageType messageType = 2;
	int32 dataSize = 3;
}