syntax = "proto3";

package PhysicsTelemetry;

import "rigid_body.proto";
import "shapes.proto";
import "frame_stats_message.proto";

option csharp_namespace = "Physics.Telemetry.Serialised";

message FrameSnapshotPacket
{
	int32 frameId = 1;
	
	repeated RigidBodyPacket rigidBodies = 2;
}

message ShapeFrameIterationPacket
{
	int32 frameId = 1;
	ShapeTypePacket shapeType = 2;
	
	ObbShapePacket obbShape = 3;
	TetrahedronShapePacket tetrahedronShape = 4;
	ConvexHullShapePacket convexHullShape = 5;
}

message ShapeDataPacket
{
	repeated ShapeFrameIterationPacket shapes = 1;
}

message FrameDataPacket
{
	repeated FrameSnapshotPacket frames = 1;
	repeated FrameStatsMessage frameStats = 2;
	
	ShapeDataPacket shapeData = 3;
}